--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Picture Quiz</title>
+
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     
+
+    <link rel="stylesheet" href="assets/js/script.js">
 </body>
 </html>
