--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
 
 <body>
 
+    <header>
+        <h1 class="header-title">The Picture Quiz!</h1>
+    </header>
+
+
+    <main></main>
+    <footer></footer>
 
     <link rel="stylesheet" href="assets/js/script.js">
 </body>
