How to play button added & Main container and welcome added

--- a/index.html
+++ b/index.html
@@ -16,10 +16,20 @@
 
     <header>
         <h1 class="header-title">The Picture Quiz!</h1>
+        <div>
+            <button class="btn-hot-to-play">How to Play</button>
+        </div>
     </header>
 
-
     <main></main>
+    <div class="container">
+        <p class="welcome">Welcome to the Picture Quiz!</p>
+        <p class="get-started">To get started, enter player's name
+            <br>
+            and select the level you wish to play
+        </p>
+    </div>
+
     <footer></footer>
 
     <link rel="stylesheet" href="assets/js/script.js">
