Player name added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <br>
             and select the level you wish to play
         </p>
+
+        <span class="player-name">
+            <label for="name-field" class="name-label">Players Name</label>
+            <input id="name-field" type="text" name="player_name" placeholder="Enter here" required>
+        </span>
     </div>
 
     <footer></footer>
