--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
             <label for="name-field" class="name-label">Players Name</label>
             <input id="name-field" type="text" name="player_name" placeholder="Enter here" required>
         </span>
+
+        <div class="btn-level-style">
+            <button class="easy-questions">Easy</button>
+
+            <button class="medium-questions">Medium</button>
+
+            <button class="easy-questions">Hard</button>
+        </div>
+
     </div>
 
     <footer></footer>
