Social media icons and copyright added to footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
+    <!--Font awesome Kit  -->
+    <script src="https://kit.fontawesome.com/3ad1443fbb.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -44,7 +46,29 @@
 
     </div>
 
-    <footer></footer>
+    <footer>
+        <ul id="social-media">
+            <li>
+                <a href="https://www.facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit us on Facebook (opens in a new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Instagram (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Twitter (opens in a new tab)"><i class="fa-brands fa-x-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit us on Youtube (opens in a new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
+            </li>
+        </ul>
+        <p class="copyright"> Created by Natalie Lockyer - Copyright Protected 2023</p>
+    </footer>
 
     <link rel="stylesheet" href="assets/js/script.js">
 </body>
