Styling added for Header and h1

--- a/index.html
+++ b/index.html
@@ -17,34 +17,38 @@
 <body>
 
     <header>
-        <h1 class="header-title">The Picture Quiz!</h1>
-        <div>
-            <button class="btn-hot-to-play">How to Play</button>
-        </div>
+        <h1>The Picture Quiz!</h1>
     </header>
 
-    <main></main>
-    <div class="container">
-        <p class="welcome">Welcome to the Picture Quiz!</p>
-        <p class="get-started">To get started, enter player's name
-            <br>
-            and select the level you wish to play
-        </p>
+    <main>
 
-        <span class="player-name">
-            <label for="name-field" class="name-label">Players Name</label>
-            <input id="name-field" type="text" name="player_name" placeholder="Enter here" required>
-        </span>
+        <div class="container">
+            <p class="welcome">Welcome to the Picture Quiz!</p>
 
-        <div class="btn-level-style">
-            <button class="easy-questions">Easy</button>
+            <div>
+                <button class="btn-hot-to-play">How to Play</button>
+            </div>
 
-            <button class="medium-questions">Medium</button>
+            <p class="get-started">To get started, enter player's name
+                <br>
+                and select the level you wish to play
+            </p>
 
-            <button class="easy-questions">Hard</button>
+            <span class="player-name">
+                <label for="name-field" class="name-label">Players Name</label>
+                <input id="name-field" type="text" name="player_name" placeholder="Enter here" required>
+            </span>
+
+            <div class="btn-level-style">
+                <button class="easy-questions">Easy</button>
+
+                <button class="medium-questions">Medium</button>
+
+                <button class="easy-questions">Hard</button>
+            </div>
+
         </div>
-
-    </div>
+    </main>
 
     <footer>
         <ul id="social-media">
