--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </p>
 
             <div class="player-name">
-                <label for="name-field" class="name-label">Players Name</label>
+                <label for="name-field" class="name-label">Players Name:</label>
                 <input id="name-field" type="text" name="player_name" placeholder="Enter here" required>
             </div>
 
