Updated boiler plate content

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Have a go at this exciting online picture Quiz, test your knowledge with 3 different levels of questions.">
+    <meta name="keywords" content="picture quiz, online quiz, fun, exciting, general knowledge, 3 levels of questions">
+    <meta name="author" content="Natalie Lockyer">
     <title>The Picture Quiz</title>
 
     <!--Links to Favicon-->
