Styling added for lightbox__inner

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
 <body>
 
     <header>
+        <!--Main heading on Homepage-->
         <h1>The Picture Quiz!</h1>
     </header>
 
     <main>
-
+        <!--Main container on homepage-->
         <div class="container">
             <p class="welcome">Welcome to the Picture Quiz!</p>
 
@@ -35,6 +36,7 @@
                 <button class="btn-how-to-play">How to Play</button>
             </div>
 
+            <!--Game instrucions-->
             <p class="get-started">To get started, enter player's name
                 <br>
                 and select the level you wish to play
@@ -60,10 +62,10 @@
 
         </div>
 
-
     </main>
 
     <footer>
+        <!--Social media icons and link to webpage-->
         <ul id="social-media">
             <li>
                 <a href="https://www.facebook.com" target="_blank" rel="noopener"
@@ -84,8 +86,10 @@
                         class="fa-brands fa-square-youtube"></i></a>
             </li>
         </ul>
+        <!--Copyright details-->
         <p class="copyright"> Created by Natalie Lockyer - Copyright Protected 2023</p>
     </footer>
+    <!--Link to the JS pages-->
     <script type="module" src="assets/js/script.js"></script>
 
 </body>
